{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 14,
  "lineage": "52163afb-e05f-af8c-ee09-9b8d94484459",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d204b1f624e3b51d",
            "arn": "arn:aws:ec2:us-east-1::instance/i-bc3dfd6744772b8bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-bc3dfd6744772b8bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-6b3db89c",
            "private_dns": "ip-10-79-44-107.ec2.internal",
            "private_ip": "10.79.44.107",
            "public_dns": "ec2-54-214-62-202.compute-1.amazonaws.com",
            "public_ip": "54.214.62.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-3bb3ea31",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e6760ef9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-bc4bdf41"
            ]
          },
          "dependencies": [
            "aws_key_pair.prod-key-pair",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::internet-gateway/igw-78187aa6",
            "id": "igw-78187aa6",
            "tags": {
              "Name": "prod-igw",
              "Stack": "tf-prod"
            },
            "tags_all": {
              "Name": "prod-igw",
              "Stack": "tf-prod"
            },
            "vpc_id": "vpc-fbbc9797"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::route-table/rtb-9418a467",
            "id": "rtb-9418a467",
            "owner_id": "",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-78187aa6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt",
              "Stack": "tf-prod"
            },
            "tags_all": {
              "Name": "prod-public-crt",
              "Stack": "tf-prod"
            },
            "vpc_id": "vpc-fbbc9797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-7bc78eda",
            "route_table_id": "rtb-9418a467",
            "subnet_id": "subnet-e6760ef9"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-bc4bdf41",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-bc4bdf41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210514195331655800000001",
            "name_prefix": "terraform-",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed",
              "Stack": "tf-prod"
            },
            "tags_all": {
              "Name": "ssh-allowed",
              "Stack": "tf-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-fbbc9797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-e6760ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-e6760ef9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111122223333",
            "tags": {
              "Name": "prod-subnet-public-1",
              "Stack": "tf-prod"
            },
            "tags_all": {
              "Name": "prod-subnet-public-1",
              "Stack": "tf-prod"
            },
            "vpc_id": "vpc-fbbc9797"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::vpc/vpc-fbbc9797",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-4d85cb6a",
            "default_route_table_id": "rtb-978be568",
            "default_security_group_id": "sg-d8ef92de",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fbbc9797",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-978be568",
            "tags": {
              "Name": "prod-vpc",
              "Stack": "tf-prod"
            },
            "tags_all": {
              "Name": "prod-vpc",
              "Stack": "tf-prod"
            }
          }
        }
      ]
    }
  ]
}